# ChangeLog for x11-themes/gnome-themes
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.36 2004/03/16 03:30:16 geoman Exp $

  15 Mar 2004; Stephen P. Becker <geoman@gentoo.org>
  gnome-themes-2.4.1.ebuild:
  Added ~mips keyword.

  10 Feb 2004; Bartosch Pixa <darkspecter@gentoo.org>
  gnome-themes-2.4.1.ebuild:
  set ppc in keywords

  28 Jan 2004; Aron Griffis <agriffis@gentoo.org> gnome-themes-2.4.1.ebuild:
  stable on alpha and ia64

  18 Jan 2004; <gustavoz@gentoo.org> gnome-themes-2.4.1.ebuild:
  stable on hppa and sparc

  14 Jan 2004; Mike Gardiner <obz@gentoo.org> gnome-themes-2.4.1.ebuild:
  Stable on x86 as part of GNOME-2.4.1

*gnome-themes-2.4.1 (11 Dec 2003)

  11 Dec 2003; Alastair Tse <liquidx@gentoo.org> gnome-themes-2.2.2-r1.ebuild,
  gnome-themes-2.4.0.ebuild, gnome-themes-2.4.1.ebuild:
  also version bumped

  11 Dec 2003; Alastair Tse <liquidx@gentoo.org> gnome-themes-2.2.2-r1.ebuild,
  gnome-themes-2.4.0.ebuild:
  fix x11-theme typo (#35539)

  14 Nov 2003; Aron Griffis <agriffis@gentoo.org> gnome-themes-2.4.0.ebuild:
  Stable on ia64

  08 Nov 2003; Todd Sunderlin <todd@gentoo.org> gnome-themes-2.4.0.ebuild:
  added sparc keyword

  22 Oct 2003; Bartosch Pixa <darkspecter@gentoo.org>
  gnome-themes-2.4.0.ebuild:
  set ppc in keywords

  17 Oct 2003; Aron Griffis <agriffis@gentoo.org> gnome-themes-2.4.0.ebuild:
  Stable on alpha

  08 Oct 2003; Mike Gardiner <obz@gentoo.org> gnome-themes-2.4.0.ebuild,
  files/gnome-themes-2.4.0-nothinice.patch:
  Re the FIXME in the ebuild and bug #30497 added a patch to not use the
  thinice-engine included here, and then depend on our version in
  x11-plugins/gtk-engines-thinice.

  07 Oct 2003; Alastair Tse <liquidx@gentoo.org> gnome-themes-0.3.ebuild,
  gnome-themes-2.2.1.ebuild, gnome-themes-2.2.2.ebuild,
  gnome-themes-2.2.ebuild, gnome-themes-2.4.0.ebuild: