@@ -1,15 +1,9 @@
-MD5 72c1eb129002bef37eba203c63901dd2 gnome-themes-2.2.1.ebuild 982
-MD5 1d14bb5e22222660379a890ec8c50236 gnome-themes-2.2.2-r1.ebuild 873
-MD5 931f9388410584461b6c4bc394555274 gnome-themes-2.2.ebuild 917
+MD5 ea392e2e2f832e8031fee7afa5e1cfb8 gnome-themes-2.5.92.ebuild 835
 MD5 01ee34e9efae88c3421827f35de05e5a gnome-themes-2.4.1.ebuild 1011
-MD5 e672f7662d9adeb08b483e4b575fd66f gnome-themes-2.2.2.ebuild 1069
-MD5 da68a203b9f838415a5b7f104af3e3a3 ChangeLog 4694
+MD5 dc3baa3f14cdc474c4cf78e646903de9 ChangeLog 4834
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 MD5 6e1867d50f2453673979169323c9f4bf gnome-themes-2.4.0.ebuild 987
-MD5 72bc1748d57dc94b06dfc5ea161b14bd files/digest-gnome-themes-2.2.1 72
-MD5 97769356747d4e13bc1ab80682fd9326 files/digest-gnome-themes-2.2.2 72
 MD5 b237b2cea04972f1f32619728e79805d files/digest-gnome-themes-2.4.0 72
 MD5 c67472bc94190957a1022ba6a825f06c files/digest-gnome-themes-2.4.1 72
-MD5 e49a55d1b7e0eff886352d2dc9058e97 files/digest-gnome-themes-2.2 70
-MD5 97769356747d4e13bc1ab80682fd9326 files/digest-gnome-themes-2.2.2-r1 72
 MD5 1c5f99943a8108a29d4a8eebbfb04db2 files/gnome-themes-2.4.0-nothinice.patch 1225
+MD5 7f745cf100217679fd0acd4284e76988 files/digest-gnome-themes-2.5.92 73
