@@ -1,0 +1,1 @@
+MD5 e18f904e2f7aafad5a773fa05198e0a6 gnome-themes-2.5.92.tar.bz2 2534498
