@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/gnome-themes-2.2.2-r1.ebuild,v 1.7 2003/12/11 15:22:41 liquidx Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/gnome-themes-2.5.92.ebuild,v 1.1 2004/03/20 22:52:51 foser Exp $
 
 # FIXME : the engines in here should probably be disabled and done in seperate ebuilds
 
@@ -11,17 +11,15 @@ HOMEPAGE="http://www.gnome.org/softwaremap/projects/gnome-themes"
 
 IUSE=""
 SLOT="0"
-KEYWORDS="x86 ppc ~sparc ~alpha ~hppa ~amd64"
-LICENSE="GPL-2"
+KEYWORDS="~x86 ~ppc ~sparc ~alpha ~hppa ~amd64 ~ia64 ~mips"
+LICENSE="LGPL-2.1"
 
 RDEPEND=">=x11-libs/gtk+-2
-	>=gnome-base/libgnomeui-2
-	>=gnome-base/libglade-2
-	>=x11-themes/gtk-engines-thinice-2.0.2
 	>=x11-themes/gtk-engines-2.2.0"
+#	!x11-themes/gtk-engines-thinice-2.0.2
 
 DEPEND=">=dev-util/pkgconfig-0.12.0
-	>=dev-util/intltool-0.23
-	!x11-themes/gtk-themes"
+	>=dev-util/intltool-0.29
+	!x11-theme/gtk-themes"
 
-DOCS="AUTHORS COPY* README INSTALL NEWS ChangeLog"
+DOCS="AUTHORS COPYING README INSTALL NEWS ChangeLog"
