@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/gnome-themes
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.36 2004/03/16 03:30:16 geoman Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.37 2004/03/20 22:52:51 foser Exp $
+
+*gnome-themes-2.5.92 (20 Mar 2004)
+
+  20 Mar 2004; foser <foser@gentoo.org> gnome-themes-2.5.92.ebuild :
+  Gnome 2.6 commit
+  Fixed license
 
   15 Mar 2004; Stephen P. Becker <geoman@gentoo.org>
   gnome-themes-2.4.1.ebuild:
